--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="images/stefanxsmall.png" width="150px" alt="Stefán Ólafur">
+      <img src="images/stefanxsmall.PNG" width="150px" alt="Stefán Ólafur">
       <h2>Halló.</h2>
       <p class="velkomin">Velkomin á persónulegu síðuna mína. Ég er stofnandi og eigandi tölvuþjónustunnar Vefskjól. Ég byrjaði einnig með Facebook síðurnar Aukatekjur og Extra Income. Ég 💙 kaffi og góðan mat. </p>
     </div>
