--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <div class="skills">
       <h2>Þekkingin mín.</h2>
       <div class="skill-row">
-        <img class="code-img" src="https://media.giphy.com/media/iIGT8Y1rOYhBpdHh1C/giphy.gif" alt="">
+        <img class="code-img" src="images/ux.png" alt="">
         <h3>Vefhönnun</h3>
         <p>Ég hef verið viðloðandi vefhönnun síðan um árið 1995. Þá fór ég að skoða kóða á heimasíðum og prófa hvað þeir gera. Síðan hefur margt breyst.</p>
       </div>
       <div class="skill-row">
-        <img class="chilli-img" src="https://media.giphy.com/media/fvx95jkua5th3YeThr/giphy.gif" alt="">
+        <img class="chilli-img" src="images/laptop-screen.png" alt="">
         <h3>Tölvuþjónusta</h3>
         <p>Ég hef starfað í tölvugeiranum frá því 1998. Það hafa miklar breytingar átt sér stað á þessum tíma og það hefur verið gríðarlega gaman að fylgjast með því öllu saman.</p>
       </div>
