--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Ég er Stefan.</h1>
     <h2><span class="vef">Vef</span>hönnuður og tölvugúrú</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img src="images/mountain.webp" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
